2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/c.m4, lib/autoconf/fortran.m4,
	* lib/autoconf/functions.m4, lib/autoconf/general.m4,
	* lib/autoconf/headers.m4, lib/autoconf/libs.m4,
	* lib/autoconf/programs.m4, lib/autoconf/specific.m4,
	* lib/autoconf/types.m4: When invoking AC_DEFINE and friends,
	specify to what the macro should be defined (typically to 1).

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/functions.m4 (AC_FUNC_STRTOD): AC_SUBST POW_LIB.
	From Jim Meyering.

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/programs.m4 (_AC_PROG_LEX_YYTEXT_DECL): Use
	AC_TRY_EVAL to run $LEX, not AC_TRY_COMMAND.  This validates the
	definition used by Automake where LEX is +/- "${missing} lex" and
	`missing' itself contains variables.

2001-11-12  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Push KILL at the end.
	Now that M4sh pushes BODY, the comments were output at the end of
	the test suites.

2001-11-08  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in (&autoreconf): Run aclocal before tracing, so
	that we can trace macros from aclocal.m4.
	Trace AC_PROG_LIBTOOL, not AM_PROG_LIBTOOL, since the latter is
	obsoleted, and redirect to the former anyway.
	Reported by Ralf Corsepius.

2001-11-08  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in (&autoreconf): AC_CONFIG_SUBIDRS are to be
	processed only if present.
	* tests/torture.at (Configuring subdirectories): Use autoreconf
	instead of successive calls to autoconf.
	Add a nonexistent subdirectory to exercise the patch above.
	Reported by Ralf Corsepius.

2001-11-08  Kevin Ryde  <user42@zip.com.au>

	* autoconf.texi (Limitations of Usual Tools): Note HP-UX cc
	doesn't accept .S files.

2001-11-07  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sugar.m4 (m4_pattern_forbid): Accepts $2.
	* lib/autoconf/general.m4 (AC_INTI): Forbid LIBOBJS.
	(_AC_LIBOBJ): s/LIBOBJS/LIB@&t@OBJS/.
	* bin/autom4te.in (warn_forbidden): New.