@@ -1,5 +1,9 @@
 2001-11-12  Akim Demaille  <akim@epita.fr>
 
+	* lib/autoconf/functions.m4 (AC_FUNC_GETMNTENT): Use AC_CHECK_FUNCS.
+
+2001-11-12  Akim Demaille  <akim@epita.fr>
+
 	* lib/autoconf/c.m4, lib/autoconf/fortran.m4,
 	* lib/autoconf/functions.m4, lib/autoconf/general.m4,
 	* lib/autoconf/headers.m4, lib/autoconf/libs.m4,
